# BTC_Password_Finder

./: .gitignore  Cargo.toml  README.md  password_ideas.txt  private_key.txt
src/: config.rs  default_mutations.txt  lib.rs  main.rs
src/engine/: batch.rs  coordinator.rs  generation.rs  iterator.rs  mod.rs
src/mutations/: case.rs  keyboard.rs  missing_extra.rs  mod.rs  patterns.rs  segments.rs  substitutions.rs  transposition.rs
tests/: decrypt.rs  test_advanced_mutations.rs  test_case.rs  test_iterator.rs
