[package]
name = "btc_password_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.31"
bip38 = "1.1.1" 
secp256k1 = "0.28"
sha2 = "0.10"
aes = "0.8"
scrypt = "0.11"
crossbeam-channel = "0.5"

[profile.release]
# Maximum optimization for cryptographic workloads
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster debug builds for development
opt-level = 1